freedium is down :(

--- a/content/post/il-2025-09.adoc
+++ b/content/post/il-2025-09.adoc
@@ -36,7 +36,7 @@ Meanwhile, Robert Anderson https://medium.com/@rdo.anderson/the-joke-of-data-vau
 * https://duckdb.org/2025/09/16/announcing-duckdb-140[DuckDB 1.4 was released], and with it the first LTS (Long Term Support) version.
 New features include support for writing Apache Iceberg files (see below), `MERGE`, and database encryption.
 * Max Gabrielsson discusses the use of https://duckdb.org/2025/08/08/spatial-joins.html[spatial data in DuckDB] and the improvements made to performance of spatial joins in 1.3.
-* Getting data from Kafka to Snowflake can be done in several different ways; Emma Amor covers two of them in https://freedium.cfd/https://medium.com/ml-cheat-sheet/building-a-modern-real-time-data-streaming-architecture-two-paths-from-kafka-to-snowflake-135a2520fbbf[this blog post].
+* Getting data from Kafka to Snowflake can be done in several different ways; Emma Amor covers two of them in https://medium.com/ml-cheat-sheet/building-a-modern-real-time-data-streaming-architecture-two-paths-from-kafka-to-snowflake-135a2520fbbf[this blog post].
 
 == AI
 
@@ -70,7 +70,7 @@ Here are some interesting articles that I've come across this month about it in 
 
 * A paper titled https://arxiv.org/pdf/2509.00997[Supporting Our AI Overlords: Redesigning Data Systems to be Agent-First] discussing the ways in which LLMs want to retrieve data and how we might change how we model data to support that.
 Murat Demirbas has a nice https://muratbuffalo.blogspot.com/2025/09/supporting-our-ai-overlords-redesigning.html[analysis and commentary] on the paper.
-* A summary of a presentation given by Xintong Song on the new https://freedium.cfd/https://medium.com/@Joannahe/flink-agents-an-event-driven-ai-agent-framework-based-on-apache-flink-45688be46dad[Flink Agents] project (a formal sub-project of Apache Flink itself)
+* A summary of a presentation given by Xintong Song on the new https://medium.com/@Joannahe/flink-agents-an-event-driven-ai-agent-framework-based-on-apache-flink-45688be46dad[Flink Agents] project (a formal sub-project of Apache Flink itself)
 * MCP servers are a nice way to provide standard interoperability between LLMs and other computer systems.
 I've not these ones out specifically but the idea of being able to chat to Claude about https://github.com/cledar/flink-mcp[Flink], https://github.com/kanapuli/mcp-kafka[Kafka], and https://github.com/confluentinc/mcp-confluent[Confluent Cloud] certainly sounds a cool idea :)
 * A https://www.pedronasc.com/articles/lessons-building-ai-data-analyst[good account] from Pedro Nascimento of why what sounds like a simple enough idea ("build an AI-powered data analyst") is a lot more complex than you may think.
@@ -80,30 +80,30 @@ I've not these ones out specifically but the idea of being able to chat to Claud
 _I mean, there may be some Delta Lake, Hudi, and DuckLake in here…but in my corner of the internet it's Iceberg all the way…_
 
 * https://github.com/apache/iceberg/releases/tag/apache-iceberg-1.10.0[Apache Iceberg 1.10] was released
-* DuckDB's support for writing to Iceberg is covered by https://freedium.cfd/https://medium.com/@neuw84/iceberg-on-duckdb-end-to-end-example-with-amazon-s3-tables-5506e8537b33[Angel Conde] and https://freedium.cfd/https://dwickyferi.medium.com/writing-iceberg-tables-with-duckdb-1-4-0-a-practical-starter-guide-54d6da4c4bce[Dwicky Feri].
-* 🔥 Anton Borisov has been busy this month, with  a deep-dive on https://freedium.cfd/https://medium.com/fresha-data-engineering/iceberg-mor-the-hard-way-starrocks-code-dive-fee5e1be66f5[Iceberg's Merge-on-Read (MoR) support in StarRocks], along with a practical guide to the evolution and key differences between https://freedium.cfd/https://medium.com/fresha-data-engineering/how-tables-grew-a-brain-iceberg-hudi-delta-paimon-ducklake-a617f34da6ce[Iceberg, Delta, Paimon, Delta, and DuckLake].
+* DuckDB's support for writing to Iceberg is covered by https://medium.com/@neuw84/iceberg-on-duckdb-end-to-end-example-with-amazon-s3-tables-5506e8537b33[Angel Conde] and https://dwickyferi.medium.com/writing-iceberg-tables-with-duckdb-1-4-0-a-practical-starter-guide-54d6da4c4bce[Dwicky Feri].
+* 🔥 Anton Borisov has been busy this month, with  a deep-dive on https://medium.com/fresha-data-engineering/iceberg-mor-the-hard-way-starrocks-code-dive-fee5e1be66f5[Iceberg's Merge-on-Read (MoR) support in StarRocks], along with a practical guide to the evolution and key differences between https://medium.com/fresha-data-engineering/how-tables-grew-a-brain-iceberg-hudi-delta-paimon-ducklake-a617f34da6ce[Iceberg, Delta, Paimon, Delta, and DuckLake].
 * https://duckdb.org/2025/09/17/ducklake-03.html[DuckLake 0.3] was released, including support for copying to and from Iceberg.
-* There are several interesting Iceberg performance articles, including a https://freedium.cfd/https://overcast.blog/11-apache-iceberg-optimization-tools-you-should-know-5b43211aac65[grab-bag of 11 tools and tips], discussion from Vincent Daniel of the https://freedium.cfd/https://medium.com/@vincent_daniel/boost-iceberg-performance-and-cut-compute-costs-with-well-scoped-merge-statements-e0a8f702c321[`MERGE` statement], and a write-up from Ancestry on their https://aws.amazon.com/blogs/big-data/how-ancestry-optimizes-a-100-billion-row-iceberg-table/[optimisation of a 100-billion row Iceberg table].
-* As well as Iceberg optimisation (above), Vincent Daniel also has https://freedium.cfd/https://medium.com/expedia-group-tech/chill-your-data-with-iceberg-write-audit-publish-746c9eb3db48[a good blog post] about WAP (Write, Audit, Publish) in Iceberg.
+* There are several interesting Iceberg performance articles, including a https://overcast.blog/11-apache-iceberg-optimization-tools-you-should-know-5b43211aac65[grab-bag of 11 tools and tips], discussion from Vincent Daniel of the https://medium.com/@vincent_daniel/boost-iceberg-performance-and-cut-compute-costs-with-well-scoped-merge-statements-e0a8f702c321[`MERGE` statement], and a write-up from Ancestry on their https://aws.amazon.com/blogs/big-data/how-ancestry-optimizes-a-100-billion-row-iceberg-table/[optimisation of a 100-billion row Iceberg table].
+* As well as Iceberg optimisation (above), Vincent Daniel also has https://medium.com/expedia-group-tech/chill-your-data-with-iceberg-write-audit-publish-746c9eb3db48[a good blog post] about WAP (Write, Audit, Publish) in Iceberg.
 This is something I spent some time looking at https://lakefs.io/blog/data-engineering-patterns-write-audit-publish/[in the past] too, and still think is a good data engineering pattern to draw on.
-* Jeffrey Jonathan Jennings has a nice hands-on example of deploying a platform of https://freedium.cfd/https://thej3.com/confluent-trifecta-kafka-flink-iceberg-ae7bf8beb46f[Kafka, Flink, and Iceberg with Confluent Cloud].
+* Jeffrey Jonathan Jennings has a nice hands-on example of deploying a platform of https://thej3.com/confluent-trifecta-kafka-flink-iceberg-ae7bf8beb46f[Kafka, Flink, and Iceberg with Confluent Cloud].
 * 🔥 A thoughtful write-up from Ananth Packkildurai (he of Data Engineering Weekly fame) addressing the challenge of https://www.dataengineeringweekly.com/p/when-dimensions-change-too-fast-for?publication_id=73271&post_id=173724688&isFreemail=true&r=3b0y7&triedRedirect=true[Fast Changing Dimensions (FCD)] in Iceberg, and examining some alternative architectures and technologies.
 * 🔥 A well-written and spicy take from WarpStream's Richie Artoul on https://www.warpstream.com/blog/the-case-for-an-iceberg-native-database-why-spark-jobs-and-zero-copy-kafka-wont-cut-it[getting data from Kafka into Iceberg] and where he sees some of the proposals from the community as flawed.
-* On the admin side of things, Nimtable's https://github.com/nimtable/iceberg-compaction[compaction runtime] for Iceberg has been released (open source/Apache 2.0), and Apache Amoro claim https://freedium.cfd/https://medium.com/@jinsong.zhou1990/10x-efficiency-boost-compared-to-spark-rewritefiles-procedure-how-apache-amoro-efficiently-7e7a993950d7[10x performance improvements] from their table maintenance feature.
+* On the admin side of things, Nimtable's https://github.com/nimtable/iceberg-compaction[compaction runtime] for Iceberg has been released (open source/Apache 2.0), and Apache Amoro claim https://medium.com/@jinsong.zhou1990/10x-efficiency-boost-compared-to-spark-rewritefiles-procedure-how-apache-amoro-efficiently-7e7a993950d7[10x performance improvements] from their table maintenance feature.
 * The Iceberg community is thriving and growing, and you can find talks from several recent meetups in Europe https://www.youtube.com/playlist?list=PL3IALGSANhzUjNrcpEZUcXYbFe-YIEua2[online here].
 
 == Kafka and Event Streaming
 
 * https://kafka.apache.org/blog#apache_kafka_410_release_announcement[Apache Kafka 4.1 was released].
 Sandon Jacobs has a useful summary of the key https://thenewstack.io/apache-kafka-4-1-the-3-big-things-developers-need-to-know/[new features].
-* Shruti Mantri has https://freedium.cfd/https://medium.com/@shruti1810/queues-for-apache-kafka-a-detailed-overview-a11c15d994d3[a good article] about Queues for Apache Kafka.
+* Shruti Mantri has https://medium.com/@shruti1810/queues-for-apache-kafka-a-detailed-overview-a11c15d994d3[a good article] about Queues for Apache Kafka.
 * 🔥 A few nice bits from Stanislav Kozlovski this month, with a deep-dive on https://newsletter.systemdesign.one/p/how-kafka-works[How Kafka Works], an infographic of the https://www.reddit.com/r/apachekafka/comments/1mzs6lt/top_5_largest_kafka_deployments/[Top 5 largest Kafka deployments], and advice on https://getkafkanated.substack.com/p/how-to-size-your-kafka-tiered-storage-cluster[sizing a Kafka cluster that's using tiered storage].
-* Aleksei Aleinikov writes about https://freedium.cfd/https://blog.dataengineerthings.org/kafka-at-scale-why-acls-fail-and-roles-win-in-2025-3a384c7f3704[why and how you should do authorisation with roles in Kafka].
+* Aleksei Aleinikov writes about https://blog.dataengineerthings.org/kafka-at-scale-why-acls-fail-and-roles-win-in-2025-3a384c7f3704[why and how you should do authorisation with roles in Kafka].
 * 🔥 A nice deep-dive https://blog.evacchi.dev/posts/2025/08/25/extending-kafka-the-hard-way-part-1/[two] https://blog.evacchi.dev/posts/2025/09/03/extending-kafka-the-hard-way-part-2/[part] series from Edoardo Vacchi looking at extending the Kafka broker
 * PagerDuty had an outage last month, at the heart of which was Kafka and an error in the implementation of an application using it.
 Read the gory details https://www.pagerduty.com/eng/august-28-kafka-outages-what-happened-and-how-were-improving/[here].
 * Klaviyo migrated from RabbitMQ to Kafka - read about https://klaviyo.tech/rebuilding-event-infrastructure-at-scale-bebfe764bd8f[why and how] and https://klaviyo.tech/building-a-distributed-priority-queue-in-kafka-1b2d8063649e[impact] in these two blog posts.
-* "_Does Kafka Guarantee Message Delivery?_" is a question that prompted https://freedium.cfd/https://levelup.gitconnected.com/does-kafka-guarantee-message-delivery-dedbcb44971c[this blog post] and some https://old.reddit.com/r/apachekafka/comments/1ne40fi/does_kafka_guarantee_message_delivery/[discussion over on r/apachekafka].
+* "_Does Kafka Guarantee Message Delivery?_" is a question that prompted https://levelup.gitconnected.com/does-kafka-guarantee-message-delivery-dedbcb44971c[this blog post] and some https://old.reddit.com/r/apachekafka/comments/1ne40fi/does_kafka_guarantee_message_delivery/[discussion over on r/apachekafka].
 * Jaehyeon Kim built a custom SMT (Single Message Transform) for https://old.reddit.com/r/apachekafka/comments/1napcme/i_built_a_custom_smt_to_get_automatic_openlineage/[Kafka Connect to add observability] into a pipeline.
 
 == Stream Processing
@@ -111,7 +111,7 @@ Read the gory details https://www.pagerduty.com/eng/august-28-kafka-outages-what
 * https://flink.apache.org/2025/09/26/apache-flink-cdc-3.5.0-release-announcement/[Flink CDC 3.5 has been released], which includes new pipeline connectors for Apache Fluss and Postgres
 * Lorenzo Nicora and Felix John published a https://aws.amazon.com/blogs/big-data/part-1-deep-dive-into-the-amazon-managed-service-for-apache-fink-application-lifecycle/[two] https://aws.amazon.com/blogs/big-data/part-2-deep-dive-into-the-amazon-managed-service-for-apache-fink-application-lifecycle/[part] blog series on application lifecycle when using Amazon's Managed service for Flink (MSF).
 * Jack Vanlightly published one of his fantastic deep-dives, this time looking in great detail at https://jack-vanlightly.com/blog/2025/9/2/understanding-apache-fluss[Apache Fluss].
-* 🔥 https://freedium.cfd/https://medium.com/fresha-data-engineering/what-the-fuss-with-fluss-flink-delta-force-1ab3d6be5c98[Anton Borisov writes] about Fluss, comparing it in use with Flink 2.1's DeltaJoin feature to standalone solutions from RisingWave and Feldera
+* 🔥 https://medium.com/fresha-data-engineering/what-the-fuss-with-fluss-flink-delta-force-1ab3d6be5c98[Anton Borisov writes] about Fluss, comparing it in use with Flink 2.1's DeltaJoin feature to standalone solutions from RisingWave and Feldera
 * A nice little https://github.com/gordonmurray/apache_fluss_flink_and_paimon[GitHub repo from Gordon Murray] in which he shows how to get up and running with Fluss, Paimon, and Flink.
 * An example application from Sebastien Viale showing how to https://github.com/michelin/kafka-streams-ensure-explicit-resource-naming[ensure Kafka Streams uses explicit resource naming] (added in Kafka 4.1 with KIP-1111)
 * Details from a talk by Yuan Mei about https://www.alibabacloud.com/blog/flink-state-management-a-journey-from-core-primitives-to-next-generation-incremental-computation_602503[Flink state management].
@@ -139,9 +139,9 @@ Read the gory details https://www.pagerduty.com/eng/august-28-kafka-outages-what
 * Some details of the data architecture at https://pola.rs/posts/case-decathlon/[Decathlon], and how they use Polars.
 * How https://stripe.com/blog/how-we-built-it-real-time-analytics-for-stripe-billing[Stripe] use Apache Flink for real-time analytics.
 * Details of how https://www.uber.com/en-GB/blog/building-ubers-data-lake-batch-data-replication-using-hivesync/[Uber] replicate between their two HDFS-based datalakes using HiveSync.
-* 🔥 A nice under-the-covers look at https://freedium.cfd/https://medium.com/fresha-data-engineering/data-lakehouse-infrastructure-218d1c0776aa[Fresha's data lakehouse architecture] from Paritosh Anand.
+* 🔥 A nice under-the-covers look at https://medium.com/fresha-data-engineering/data-lakehouse-infrastructure-218d1c0776aa[Fresha's data lakehouse architecture] from Paritosh Anand.
 * Chick-fil-A's Caleb Lampert describes their https://medium.com/chick-fil-atech/data-asset-certification-how-soup-can-inspire-us-to-steward-our-data-better-4d1812b0b128[Data Asset Certification Framework] (and its relationship to soup…)
-* Airbnb built their own K/V store called Mussel—read about the https://freedium.cfd/https://medium.com/airbnb-engineering/mussel-airbnbs-key-value-store-for-derived-data-406b9fa1b296[original V1] and the https://freedium.cfd/https://medium.com/airbnb-engineering/building-a-next-generation-key-value-store-at-airbnb-0de8465ba354[re-architected V2].
+* Airbnb built their own K/V store called Mussel—read about the https://medium.com/airbnb-engineering/mussel-airbnbs-key-value-store-for-derived-data-406b9fa1b296[original V1] and the https://medium.com/airbnb-engineering/building-a-next-generation-key-value-store-at-airbnb-0de8465ba354[re-architected V2].
 * Metagenomi write about https://aws.amazon.com/blogs/architecture/a-scalable-elastic-database-and-search-solution-for-1b-vectors-built-on-lancedb-and-amazon-s3/[how they use LanceDB on S3].
 * A https://www.databricks.com/blog/databricks-databricks-scaling-database-reliability[write-up] of https://www.usenix.org/conference/srecon25americas/presentation/jiang[a talk] given by Xiaotong Jiang from Databricks on how they approach OLTP database performance and optimisation in a multi-tenant architecture.
 * Details of https://blog.developer.bazaarvoice.com/2025/08/25/how-we-migrated-millions-of-ugc-records-to-aurora-mysql/[how Bazaarvoice migrated] from RDS MySQL to AWS Aurora.
@@ -161,7 +161,7 @@ If you can't wait for this monthly round-up of links, you might like the followi
 
 _Nothing to do with data, but stuff that I've found interesting or has made me smile._
 
-* 🔥 Kirill Bobrov - https://freedium.cfd/https://blog.dataengineerthings.org/how-the-community-turned-into-a-saas-commercial-82a58778e816[How the Community Turned Into a SaaS Commercial]
+* 🔥 Kirill Bobrov - https://blog.dataengineerthings.org/how-the-community-turned-into-a-saas-commercial-82a58778e816[How the Community Turned Into a SaaS Commercial]
 * TIL: https://daniel.lawrence.lu/blog/y2025m09d21/[Line Scan Cameras]
 * 🔥 https://anniemueller.com/posts/how-i-a-non-developer-read-the-tutorial-you-a-developer-wrote-for-me-a-beginner#fn:3[How I, a non-developer, read the tutorial you, a developer, wrote for me, a beginner]
 * https://thegrowtheq.com/where-have-all-the-serious-people-gone/[Where Have All the Serious People Gone?]
@@ -174,4 +174,7 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 
 ---
 
-TIP: If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+[NOTE]
+====
+* If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+====
