--- a/content/post/ai-ml.adoc
+++ b/content/post/ai-ml.adoc
@@ -57,7 +57,7 @@ Other uses of different model types include clustering, classification, anomaly 
 ML includes terms like _supervised learning_, _unsupervised learning_, and _reinforcement learning_.
 It is also where the cool stuff like neural networks and deep learning fits too (_I am aware how casually I am inserting a whole swathe of academic research here; this is just my mental bracketing exercise, feel free to flame me in the comments below_).
 
-== My God…it's full of marketing BS
+== My God…it's full of marketing BS (but that doesn't make it untrue)
 
 Just like Cloud and Blockchain were previously, AI has become a lightning rod for every manner of ridiculous marketing claim and overinflated startup valuation.
 
@@ -69,3 +69,15 @@ Just like Cloud, it's a reasonable person who wants to take a step back and unde
 And that's what I'm trying my best to do in link:/categories/stumbling-into-ai/[this series of blog posts].
 
 TIP: If you spotted the omission of Blockchain in the subsequent statements above, that is not an error 😉
+
+=== Don't just take my word for it
+
+Sam Newman https://www.linkedin.com/posts/samnewman_to-those-of-you-who-are-deeply-pessimistic-activity-7373683325925900288-gFqC/[posted an excellent note] on LinkedIn, which begins:
+
+> To those of you who are deeply pessimistic around the use of AI in software delivery, the old quote from John Maynard Keynes comes to mind:
+>
+> _**"The market can remain irrational longer than you can remain solvent".**_
+
+Go read the rest of the post (it's not long).
+
+In addition, Scott Werner's article 🔥 https://worksonmymachine.ai/p/the-only-skill-that-matters-now[The Only Skill That Matters Now] puts it even more clearly into focus, with a nice analogy about how "skating to the puck" is no longer a viable strategy (tl;dr the rate of change in AI means you have no idea where the puck will even be).
