--- a/content/post/ai-agents.adoc
+++ b/content/post/ai-agents.adoc
@@ -16,7 +16,7 @@ categories:
 :rouge-css: style
 :rouge-style: monokai
 
-_A link:/categories/stumbling-into-ai[short series] of notes for myself as I learn more about the AI ecosystem as of September 2025._
+_A link:/categories/stumbling-into-ai[short series] of notes for myself as I learn more about the AI ecosystem as of Autumn [Fall] 2025._
 _The driver for all this is understanding more about Apache Flink's https://github.com/apache/flink-agents[*Flink Agents*] project, and Confluent's https://www.confluent.io/product/streaming-agents/[**Streaming Agents**]._
 
 I started off link:/categories/stumbling-into-ai/[this series]—somewhat randomly, with hindsight—looking at link:/2025/09/04/stumbling-into-ai-part-1mcp/[Model Context Protocol (*MCP*)].
