Add note for comment section

--- a/content/post/ai-agents.adoc
+++ b/content/post/ai-agents.adoc
@@ -233,10 +233,14 @@ As well as simply using smarter models that make fewer mistakes, there are other
 For example, an Agent is allowed to book travel but only up to a defined threshold.
 That way the user gets to trade off convenience (no HITL) with risk (unintended first-class flight to Hawaii).
 
-
 == Further reading
 
 * 📃 https://arxiv.org/pdf/2304.03442[Generative Agents: Interactive Simulacra of Human Behavior]
 * 🎥 Paul Iusztin - https://www.infoq.com/presentations/llm-data-code-model-prompt/[The Data Backbone of LLM Systems] - QCon London 2025
 * 📖 Antonio Gulli - https://docs.google.com/document/d/1rsaK53T3Lg5KoGwvf8ukOUvbELRtH-V0LnOIFDxBryE/preview?tab=t.0#[Agentic Design Patterns]
 * 📖 Sean Falconer - https://seanfalconer.medium.com/
+
+== But…this guy is talking nonsense!
+
+The purpose of this blog series is for me to take notes as I try to build my understanding of this space.
+If I've got anything wrong, or am missing some important nuances—please let me know in the comments below 😁 👇
