--- a/content/talk/blog-writing-for-developers/index.adoc
+++ b/content/talk/blog-writing-for-developers/index.adoc
@@ -13,14 +13,6 @@ A presentation about effective blog writing for developers, covering why to blog
 
 <!--more-->
 
-++++
-<iframe src="slides.html" width="100%" height="600" frameborder="0" allowfullscreen></iframe>
-++++
-
-TIP: Press `F` to view it full screen.
-
-## About This Talk
-
 This presentation covers:
 
 - **Why** developers should blog
@@ -29,4 +21,14 @@ This presentation covers:
 - Tools and platforms for technical writing
 - Using AI in the writing process
 
-The presentation is built from AsciiDoc source using reveal.js and automatically generated during the Hugo build process.
+
+++++
+<iframe src="slides.html" width="100%" height="600" frameborder="0" allowfullscreen></iframe>
+++++
+
+TIP: Click in the presentation iframe and then press `f` to view it full screen.
+
+## About This Talk
+
+The presentation is built from AsciiDoc source using reveal.js.
+You can find the source https://github.com/rmoff/rmoff-blog/blob/main/content/talk/blog-writing-for-developers/slides.adoc[here].
