--- a/content/talk/blog-writing-for-developers/slides.adoc
+++ b/content/talk/blog-writing-for-developers/slides.adoc
@@ -38,8 +38,8 @@ image::images/2025-10-09T10-45-17-982Z.png[]
 
 // image::images/2025-10-09T10-55-40-086Z.png[]
 
-[background-color="darkred"]
-== IMHO
+[background-image="images/opinion.gif", background-size="contain"]
+== !
 
 == What we're going to cover
 
