First draft done

--- a/content/talk/blog-writing-for-developers/slides.adoc
+++ b/content/talk/blog-writing-for-developers/slides.adoc
@@ -2,8 +2,34 @@
 Robin Moffatt
 :backend: revealjs
 :revealjs_theme: league
-:revealjs_transitionSpeed: fast
+// :revealjs_transitionSpeed: fast
 :revealjsdir: https://cdn.jsdelivr.net/npm/reveal.js@5
+
+++++
+<style>
+.reveal::after {
+  content: "@rmoff";
+  position: fixed;
+  top: 5px;
+  left: 5px;
+  color:rgba(0, 255, 0, 0.76);
+  background: rgba(0, 0, 0, 0.65);
+  padding: 2px 4px;
+  font-size: 0.5em;
+  font-style: normal;
+  font-family: "Monaco", "Lucida Console", "Courier New", monospace;
+  z-index: 1000;
+  border-radius: 2px;
+  border: 1px solidrgba(0, 255, 0, 0.75);
+  // transform: rotate(-90deg);
+  // transform-origin: left center;
+}
+
+.reveal.title-slide::after {
+  display: none;
+}
+</style>
+++++
 
 == `whoami`
 
@@ -39,7 +65,7 @@ image::images/2025-10-09T10-45-17-982Z.png[]
 // image::images/2025-10-09T10-55-40-086Z.png[]
 
 [background-image="images/opinion.gif", background-size="contain"]
-== !
+== Disclaimer
 
 == What we're going to cover
 
@@ -228,11 +254,11 @@ image::images/blog_content4.excalidraw.webp[]
 // // Who are you writing for → You / PMM / Everyone
 // * Uniformity
 
+[background-image="images/03.svg", background-size="contain"]
 === !
-==== Voice / Personality
+// === Voice / Personality
 
-image::images/03.svg[]
-
+// image::images/03.svg[]
 
 // How you decide where to pitch your voice on this scale will come down to your preference, audience, and general area and discipline. If you spend much time on Twitter you’ll notice that InfoSec Twitter is different from DevOps Twitter, which is different again from DataEng Twitter. Each has its own cliques and customs, and also a varying range to which an author’s voice shines through in published writing.
 
@@ -240,31 +266,28 @@ image::images/03.svg[]
 
 // When we get to things like blogs and other types of writing we _deliberately_ want to include some personality. How much is up to you to calibrate with your audience and yourself. There is a “Goldilocks” zone here—enough personality and genuine voice coming through to convince the reader that they are reading something that was written by someone who is actually interested and informed on the matter, but not so much that it gets in the way of the content.
 
+[background-image="images/04.svg", background-size="contain"]
 === !
-==== Uniformity
+// === Uniformity / Completeness
 
-image::images/04.svg[]
+// image::images/04.svg[]
 
 // Using the example of blogs, you’ll find that blogs for a company or project are going to have a strong focus on the consistency of messaging and structure. There’ll be an introduction, there’ll be context; it’ll be comprehensive.
 
 // Compare that to a personal blog that may sometimes be not much more than the gutterings of a developer wanting to log an error message and solution for future Googlers. They _might_ flesh it out into a longer article, but that’s not necessary for it still to have value.
 
-// [%notitle]
-// === How you write depends on where you're writing and for whom
 
-// image::images/dims01.excalidraw.png[]
+[background-image="images/dims03b.excalidraw.png", background-size="contain"]
+=== !
+// Regardless, you must maintain clarity
 
-// [%notitle]
-// === There can be a range within each of these
+// image::images/dims03b.excalidraw.png[]
 
-// // Things aren’t always so simple, and for some platforms in particular there’s quite a range:
+[background-image="images/dims03.excalidraw.png", background-size="contain"]
+=== !
+// Sliding scale depending on where you're posting
 
-// image::images/dims02.excalidraw.png[]
-
-[%notitle]
-=== Regardless, you must maintain clarity
-
-image::images/dims03.excalidraw.png[]
+// image::images/dims03.excalidraw.png[]
 
 === Process
 
@@ -277,18 +300,15 @@ image::images/2025-10-10T15-42-28-637Z.png[]
 image::images/08.png[]
 // - Just start writing: get thoughts down and iterate
 
-[background-image="owl_sketch.png", background-size="contain", background-transition="none"]
+[background-image="images/owl_sketch.png", background-size="contain", background-transition="none"]
 === !
 
-[background-image="owl_full.png", background-size="contain", background-transition="none"]
+[background-image="images/owl_full.png", background-size="contain", background-transition="none"]
 === !
 
 // 27 minutes to here
 
 == Platforms & Tools
-
-(See also https://github.com/scynthiadunlop/WritingForDevelopersBook/blob/main/links/README.md#where-to-post-your-posts[this list])
-
 
 === Self-hosted
 
@@ -378,7 +398,7 @@ image::images/eww.gif[No.]
 * 🎥 https://www.youtube.com/watch?v=vtIzMaLkCaM[The Craft of Writing Effectively] - Larry McEnerney
 * 🎧 https://oxide-and-friends.transistor.fm/episodes/technical-blogging[Oxide & Friends podcast]: Technical Blogging
 
-[background-image="https://github.com/scynthiadunlop/WritingForDevelopersBook/raw/main/excerpts/cover_frame.png"]
+[background-image="https://github.com/scynthiadunlop/WritingForDevelopersBook/raw/main/excerpts/cover_frame.png", background-size="contain"]
 == !
 
 == !
