--- a/content/talk/blog-writing-for-developers/index.adoc
+++ b/content/talk/blog-writing-for-developers/index.adoc
@@ -31,4 +31,4 @@ TIP: Click in the presentation iframe and then press `f` to view it full screen.
 ## About This Talk
 
 The presentation is built from AsciiDoc source using reveal.js.
-You can find the source https://github.com/rmoff/rmoff-blog/blob/main/content/talk/blog-writing-for-developers/slides.adoc[here].
+You can find the source https://raw.githubusercontent.com/rmoff/rmoff-blog/refs/heads/main/content/talk/blog-writing-for-developers/slides.adoc[here].
