--- a/content/talk/blog-writing-for-developers/slides.adoc
+++ b/content/talk/blog-writing-for-developers/slides.adoc
@@ -383,12 +383,12 @@ image::images/eww.gif[No.]
 
 === The importance of Reviews
 
-* Before you send it anywhere…use a spell checker!
-* Use GDoc in suggestion mode
+* Before you send it anywhere…use a spell checker! 🙏
+* Use Google Doc in suggestion mode
 * Be clear what you're asking for in the review
 ** Copyediting vs Technical review
 ** Respect the reviewer
-** Don't be precious, but don't lose your voice
+** Don't be precious—but don't lose your voice
 
 🔗 https://rmoff.net/2020/04/16/converting-from-asciidoc-to-google-docs-and-ms-word/[Converting from AsciiDoc to Google Docs and MS Word]
 
