--- a/content/talk/blog-writing-for-developers/slides.adoc
+++ b/content/talk/blog-writing-for-developers/slides.adoc
@@ -291,9 +291,8 @@ image::images/blog_content4.excalidraw.webp[]
 
 === Process
 
-=== Mind Maps
-
-image::images/2025-10-10T15-42-28-637Z.png[]
+[background-image="images/2025-10-10T15-42-28-637Z.png", background-size="contain", background-transition="none"]
+=== !
 
 === JFDI
 
@@ -349,11 +348,6 @@ image::images/2025-10-13T12-27-09-541Z.png[]
 
 === Reviews
 
-image::images/2025-10-13T12-32-23-385Z.png[]
-
-=== !
-==== Prompt example
-
 ----
 This is the draft of a blog article I am about to publish.
 I would like you to concisely list the following:
@@ -381,31 +375,19 @@ image::images/eww.gif[No.]
 
 🛑 Not yet!
 
-=== The importance of Reviews
+=== Practicalities
 
 * Before you send it anywhere…use a spell checker! 🙏
 * Use Google Doc in suggestion mode
-* Be clear what you're asking for in the review
-** Copyediting vs Technical review
-** Respect the reviewer
-** Don't be precious—but don't lose your voice
 
 🔗 https://rmoff.net/2020/04/16/converting-from-asciidoc-to-google-docs-and-ms-word/[Converting from AsciiDoc to Google Docs and MS Word]
 
-== Resources
+=== Principles
 
-* ✍️ https://rmoff.net/2023/07/19/blog-writing-for-developers/[Blog writing for Developers] - Robin Moffatt
-* 🎥 https://www.youtube.com/watch?v=vtIzMaLkCaM[The Craft of Writing Effectively] - Larry McEnerney
-* 🎧 https://oxide-and-friends.transistor.fm/episodes/technical-blogging[Oxide & Friends podcast]: Technical Blogging
-
-[background-image="https://github.com/scynthiadunlop/WritingForDevelopersBook/raw/main/excerpts/cover_frame.png", background-size="contain"]
-== !
-
-== !
-* 📕 https://github.com/scynthiadunlop/WritingForDevelopersBook/[Writing For Developers: Blogs That Get Read] (Piotr Sarna & Cynthia Dunlop)
-* 🔗 https://github.com/scynthiadunlop/WritingForDevelopersBook/blob/main/links/README.md[Resources] mentioned in the book
-
-* 📰 https://writethatblog.substack.com/[Write that Blog!] (newsletter)
+* Be clear what you're asking for in the review
+** Copyediting vs Technical review
+* Respect the reviewer
+** Don't be precious—but don't lose your voice
 
 == #EOF (almost)
 
@@ -413,6 +395,22 @@ image::images/eww.gif[No.]
 - If you want to develop as a blog writer, find an author you like and ask them to mentor you
 - Don't polish too much; no-one's going to read it anyway ;)
 - Start, today!
+
+== Resources
+
+* ✍️ https://rmoff.net/2023/07/19/blog-writing-for-developers/[Blog writing for Developers] - Robin Moffatt
+* 🎥 https://www.youtube.com/watch?v=vtIzMaLkCaM[The Craft of Writing Effectively] - Larry McEnerney
+* 🎧 https://oxide-and-friends.transistor.fm/episodes/technical-blogging[Oxide & Friends podcast]: Technical Blogging
+
+== !
+
+image::https://github.com/scynthiadunlop/WritingForDevelopersBook/raw/main/excerpts/cover_frame.png[width=300]
+
+* 📕 https://github.com/scynthiadunlop/WritingForDevelopersBook/[Writing For Developers: Blogs That Get Read] (Piotr Sarna & Cynthia Dunlop)
+* 🔗 https://github.com/scynthiadunlop/WritingForDevelopersBook/blob/main/links/README.md[Resources] mentioned in the book
+
+* 📰 https://writethatblog.substack.com/[Write that Blog!] (newsletter)
+
 
 == Q&A
 
