--- a/content/talk/blog-writing-for-developers/index.adoc
+++ b/content/talk/blog-writing-for-developers/index.adoc
@@ -1,6 +1,6 @@
 ---
 draft: false
-title: 'Blog Writing'
+title: 'Blog Writing for Developers - slides'
 date: "2025-10-21T14:02:16Z"
 image: "/images/2025/10/h_IMG_2846.jpeg"
 thumbnail: "/images/2025/10/t_IMG_2896.jpeg"
