--- a/content/talk/blog-writing-for-developers/slides.adoc
+++ b/content/talk/blog-writing-for-developers/slides.adoc
@@ -75,7 +75,7 @@ image::images/2025-10-09T10-45-17-982Z.png[]
 // to blog _about_?
 * *How*?
 // to blog?
-* _Other things that don't fit into action verbs!_
+* _Other things that don't fit into interrogative adverbs!_
 ** Platforms and Tools
 ** Reviews
 ** AI
