Remove last slide

--- a/content/talk/blog-writing-for-developers/slides.adoc
+++ b/content/talk/blog-writing-for-developers/slides.adoc
@@ -412,8 +412,8 @@ image::https://github.com/scynthiadunlop/WritingForDevelopersBook/raw/main/excer
 * 📰 https://writethatblog.substack.com/[Write that Blog!] (newsletter)
 
 
-== Q&A
+// == Q&A
 
-_Now, or anytime - open invitation to DM me or get in touch on #devrel channel._
+// _Now, or anytime - open invitation to DM me or get in touch on #devrel channel._
 
 // 38 minutes
