Remove 'slides' from header

--- a/content/talk/blog-writing-for-developers/index.adoc
+++ b/content/talk/blog-writing-for-developers/index.adoc
@@ -1,6 +1,6 @@
 ---
 draft: false
-title: 'Blog Writing for Developers - slides'
+title: 'Blog Writing for Developers'
 date: "2025-10-22T16:00:00Z"
 image: "/images/2025/10/h_IMG_2846.jpeg"
 thumbnail: "/images/2025/10/t_IMG_2896.jpeg"
@@ -28,6 +28,9 @@ This presentation covers:
 
 TIP: Click in the presentation iframe and then press `f` to view it full screen.
 
+_The presentation is built from AsciiDoc source using reveal.js._
+_You can find the source https://raw.githubusercontent.com/rmoff/rmoff-blog/refs/heads/main/content/talk/blog-writing-for-developers/slides.adoc[here]._
+
 ## 🎧 Recording
 
 No video, but you can listen to the recording here (or download it for offline listening).
@@ -36,8 +39,3 @@ Apologies for the voice quality—I was getting over a bad cold! 🤧
 ++++
 <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%3Atracks%3A2196346439%3Fsecret_token%3Ds-O1uGJxAW12D&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/rmoff" title="rmoff" target="_blank" style="color: #cccccc; text-decoration: none;">rmoff</a> · <a href="https://soundcloud.com/rmoff/blog-writing-for-developers/s-O1uGJxAW12D" title="Blog Writing for Developers" target="_blank" style="color: #cccccc; text-decoration: none;">Blog Writing for Developers</a></div>
 ++++
-
-## About the slides
-
-The presentation is built from AsciiDoc source using reveal.js.
-You can find the source https://raw.githubusercontent.com/rmoff/rmoff-blog/refs/heads/main/content/talk/blog-writing-for-developers/slides.adoc[here].
